--- a/osk/Wikiled.Controls.Wpf/Wikiled.Controls.Wpf.csproj
+++ b/osk/Wikiled.Controls.Wpf/Wikiled.Controls.Wpf.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{04E5C0F8-3F11-46FA-B321-B59D20E55656}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Wikiled.Controls.Wpf</RootNamespace>
-    <AssemblyName>Wikiled.Controls.Wpf</AssemblyName>
+    <RootNamespace>Wikiled.Controls</RootNamespace>
+    <AssemblyName>Wikiled.Controls</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -124,9 +124,6 @@
     <Compile Include="..\Wikiled.Controls\UI\DelegateCommand.cs">
       <Link>UI\DelegateCommand.cs</Link>
     </Compile>
-    <Compile Include="..\Wikiled.Controls\UI\KeyboardResourcesHelper.cs">
-      <Link>UI\KeyboardResourcesHelper.cs</Link>
-    </Compile>
     <Compile Include="..\Wikiled.Controls\UI\KeyStyleConverter.cs">
       <Link>UI\KeyStyleConverter.cs</Link>
     </Compile>
@@ -136,9 +133,6 @@
     <Compile Include="..\Wikiled.Controls\UI\StretchDirection.cs">
       <Link>UI\StretchDirection.cs</Link>
     </Compile>
-    <Compile Include="..\Wikiled.Controls\UI\Viewbox.cs">
-      <Link>UI\Viewbox.cs</Link>
-    </Compile>
     <Compile Include="..\Wikiled.Controls\UI\VisibilityConverter.cs">
       <Link>UI\VisibilityConverter.cs</Link>
     </Compile>
@@ -146,99 +140,99 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\Wikiled.Controls\Images\Apply.jpg">
+    <Resource Include="..\Wikiled.Controls\Images\Apply.jpg">
       <Link>Images\Apply.jpg</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Images\cancel.jpg">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Images\cancel.jpg">
       <Link>Images\cancel.jpg</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\arabic.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\arabic.xml">
       <Link>Layouts\arabic.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\CompletlyCustom.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\CompletlyCustom.xml">
       <Link>Layouts\CompletlyCustom.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Croatian.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Croatian.xml">
       <Link>Layouts\Croatian.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Czech.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Czech.xml">
       <Link>Layouts\Czech.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Danish.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Danish.xml">
       <Link>Layouts\Danish.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Dutch.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Dutch.xml">
       <Link>Layouts\Dutch.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\english.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\english.xml">
       <Link>Layouts\english.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Estonian.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Estonian.xml">
       <Link>Layouts\Estonian.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Farsi.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Farsi.xml">
       <Link>Layouts\Farsi.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Finnish.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Finnish.xml">
       <Link>Layouts\Finnish.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\French.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\French.xml">
       <Link>Layouts\French.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\German.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\German.xml">
       <Link>Layouts\German.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Greek.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Greek.xml">
       <Link>Layouts\Greek.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Hebrew.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Hebrew.xml">
       <Link>Layouts\Hebrew.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Italian.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Italian.xml">
       <Link>Layouts\Italian.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Latvian.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Latvian.xml">
       <Link>Layouts\Latvian.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Layouts.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Layouts.xml">
       <Link>Layouts\Layouts.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Lithuanian.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Lithuanian.xml">
       <Link>Layouts\Lithuanian.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Norwegian.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Norwegian.xml">
       <Link>Layouts\Norwegian.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Polish.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Polish.xml">
       <Link>Layouts\Polish.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Portuguese.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Portuguese.xml">
       <Link>Layouts\Portuguese.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Russian.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Russian.xml">
       <Link>Layouts\Russian.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Serbian.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Serbian.xml">
       <Link>Layouts\Serbian.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Slovak.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Slovak.xml">
       <Link>Layouts\Slovak.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Spanish.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Spanish.xml">
       <Link>Layouts\Spanish.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Swedish.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Swedish.xml">
       <Link>Layouts\Swedish.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Thai.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Thai.xml">
       <Link>Layouts\Thai.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Turkish.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Turkish.xml">
       <Link>Layouts\Turkish.xml</Link>
-    </Content>
-    <Content Include="..\Wikiled.Controls\Layouts\Ukrainian.xml">
+    </Resource>
+    <Resource Include="..\Wikiled.Controls\Layouts\Ukrainian.xml">
       <Link>Layouts\Ukrainian.xml</Link>
-    </Content>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
     <Page Include="..\Wikiled.Controls\Keyboard\KeyboardControl.xaml">
